--- a/principal.css
+++ b/principal.css
@@ -17,11 +17,13 @@
   border: 0;
 }
 
+
 body{
   width: 100%;
   height: auto;
   overflow-x: hidden;
 }
+
 
 video{
   width: 100%;
@@ -42,7 +44,6 @@ header{
   align-items: center;
   flex-direction: row;
   
-
 }
 
 
@@ -51,6 +52,7 @@ header.scrolled{
   background-color: #000;
 
 }
+
 
 
 
@@ -97,7 +99,7 @@ nav h2{
   height: 100px;
   font-size: 100px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
   text-decoration: bold;
   margin-left: 500px;
   font-family: 'Roboto';
@@ -137,26 +139,27 @@ nav h2{
   height: 600px;
 }
 
-#dourado h2{
+#textos2 h1{
   position: relative;
   width: 90%;
-  height: 100px;
-
+  height: 30px;
+  margin-left: 20px;
   font-family: 'Roboto';
-  font-size: 90px;
+  font-size: 70px;
   margin-top: 40px;
-
-  
+  font-weight: bold;
+  text-align: center;
 }
 
-#dourado p{
+#textos2 p{
   position: relative;
-  width: 90%;
-  height: 500px;
-
-  margin-top: 80px;
+  width: 80%;
+  height: 400px;
+  margin-left: 50px;
+  margin-top: 10px;
   font-family: 'Roboto';
-  font-size: 30px;
+  font-size: 35px;
+  text-align: center;
 
 }
 
